--- a/profiles.yml
+++ b/profiles.yml
@@ -1,7 +1,7 @@
 twitter_dbt:
   outputs:
     dev:
-      dataset: "twitter-project-328515"
+      dataset: twitter_dbt
       job_execution_timeout_seconds: 300
       job_retries: 1
       keyfile: "secrets/dbt-service-keyfile.json"
